# cyberdeck

./: Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md  TODO.md  build.rs  cyberdeck.service  flake.nix  install.sh  test-config.json
.github/workflows/: release.yml
assets/: icons.json
mods/: audio.mod.toml  bluetooth.mod.toml  brightness.mod.toml  calendar.mod.toml  clipboard.mod.toml  default.nix  inputs.mod.toml  keyboard.mod.toml  media.mod.toml  mounts.mod.toml  network.mod.toml  notifications.mod.toml  outputs.mod.toml  profiles.mod.toml  recording.mod.toml  screenshot.mod.toml  session.mod.toml  snip.mod.toml  storage.mod.toml  system.mod.toml  wallpaper.mod.toml  weather.mod.toml  window.mod.toml  workspaces.mod.toml
mods/audio/: audio.nix
mods/bluetooth/: bluetooth.nix
mods/brightness/: brightness.nix
mods/calendar/: calendar.nix
mods/clipboard/: clipboard.nix
mods/keyboard/: keyboard.nix
mods/launcher/: launcher.nix
mods/media/: media.nix
mods/mounts/: mounts.nix
mods/network/: network.nix
mods/notifications/: notifications.nix
mods/profiles/: profiles.nix
mods/session/: session.nix
mods/storage/: storage.nix
mods/system/: system.nix
mods/wallpaper/: wallpaper.nix
mods/weather/: weather.nix
mods/window/: window.nix
mods/workspaces/: workspaces.nix
nix/: module.nix
plans/: greeter.plan.md
src/: actions.rs  appicon.rs  bar.rs  cli.rs  color.rs  config.rs  gpu.rs  gpu_render.rs  icons.rs  ipc.rs  layout.rs  main.rs  modlib.rs  nav.rs  notifications.rs  pipewire.rs  render.rs  source.rs  template.rs  view.rs
(+44 files in other folders)
