[package]
name = "cyberdeck"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = "0.19"
cosmic-text = "0.12"
tiny-skia = "0.11"
resvg = "0.44"
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustix = { version = "0.38", features = ["fs", "net"] }
chrono = "0.4"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
unicode-width = "0.2"
